--- a/personal.css
+++ b/personal.css
@@ -1,7 +1,9 @@
 @import url('http://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 body
 {
-    margin: 10;
+   
+    background-color: rgb(157, 161, 162);
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
@@ -12,10 +14,12 @@ a{
 }
 .hero
 {
+  background:url(asees.jpg);
 
-  width:100%;
-  height: 100vh;  
-  background: url(https://static.vecteezy.com/system/resources/thumbnails/002/045/702/small/snowy-winter-landscape-with-trees-mountains-and-snowfall-vector.jpg);
+  width: 100%;
+  height: 100vh;
+
+ 
   background-size: cover;
 }
 nav{
@@ -94,12 +98,80 @@ nav ul li a:hover:after{
     text-transform: inherit;
     width: 70%;
 }
-.content hi spam{
-    color: #fd4766;
-}
 .content p{
   width: 55%;  
   color: #757575;
   margin-top: 30px;
   margin-bottom: 30px;
+}
+#about{
+    padding: 80px 0;
+}
+.row
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1
+{
+    flex-basis: 35%;
+}
+.about-col-1 img 
+{
+    width: 100%;
+    border-radius: 15px;
+}
+.about-col-2
+{
+    flex-basis: 60%;
+}
+.sub-title
+{
+    font-size: 60px;
+    font-weight: 600;
+}
+.tab-title
+{
+    display: flex;
+    margin: 20px 0 40px;
+}
+.tab-links
+{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+.tab-links::after
+{
+content: '';
+width: 0;
+height: 3px;
+background: brown;
+position: absolute;
+left: 0;
+bottom: -8px;
+transition: 0.5s;
+}
+.tab-links.active-link::after
+{
+    width: 50%;
+}
+.tab-contents ul li{
+list-style: none;
+margin: 10px 0;
+}
+.tab-contents ul li span{
+    color: brown;
+    font-size: 14px;
+}
+.tab-contents
+{
+   display: none; 
+}
+.tab-contents.active-tab
+{
+    display: block;
 }
