--- a/mission-x/src/App.css
+++ b/mission-x/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+
+  flex-wrap: wrap;
+  box-sizing: border-box;
+
 }
 
 .App-logo {
@@ -32,6 +35,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
