--- a/mission-x/src/Images.css
+++ b/mission-x/src/Images.css
@@ -1,6 +1,5 @@
-.Images {
-    flex: 70%;
-    /* sets flex-basis as 30%*/
+/*.Images {
+    flex: 2;
     background-color: rgb(185, 130, 171);
     padding: 20px;
-}
+}*/
