--- a/mission-x/src/Sidebar.css
+++ b/mission-x/src/Sidebar.css
@@ -1,6 +1,5 @@
-.Side_bar {
-    flex: 30%;
-    /* sets flex-basis as 30%*/
+/*.Side_bar {
+    flex: 1;
     background-color: skyblue;
     padding: 20px;
-}
+}*/
