--- a/mission-x/src/index.css
+++ b/mission-x/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 1mm;
+  margin-bottom: 1mm;
+  margin-left: 6mm;
+  margin-right: 5mm;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Side_bar {
+  flex: 1;
+  background-color: skyblue;
+  padding: 20px;
+}
+
+.Images {
+  flex: 3;
+  background-color: rgb(185, 130, 171);
+  padding: 20px;
+}
+
+Button {
+  display: inline-block;
+  background: white;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  margin: 1px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+
+
+}
+
+Button:hover {
+  background-color: skyblue;
+  color: black;
 }
