--- a/mission-x/src/index.css
+++ b/mission-x/src/index.css
@@ -1,25 +1,29 @@
 .container {
+    
   display: flex;
   flex-wrap: wrap;
   margin-top: 1mm;
   margin-bottom: 1mm;
-  margin-left: 6mm;
-  margin-right: 5mm;
+  margin-left: 20mm;
+  margin-right: 20mm;
 
 }
 
 .Side_bar {
   flex: 1;
-  background-color: skyblue;
   padding: 20px;
-  text-align: center;
+  text-align: left;
+}
+h4{
+  text-decoration: underline;
 }
 
 .Images {
   flex: 3;
-  margin: 2mm;
-  background-color: rgb(185, 130, 171);
-  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+   padding: 20px;
 }
 
 img {
