--- a/mission-x/src/components/Button.css
+++ b/mission-x/src/components/Button.css
@@ -11,7 +11,7 @@ Button {
      text-decoration: none;
      font-size: 15px;
      font-family: inherit;
- 
+     font-family: "adobe-clean", sans-serif;
  
  
  
@@ -24,7 +24,7 @@ Button {
  .Button_Container {
     
      display: flex;
-     margin-left: 12cm;
+     margin-left: 13cm;
      margin-right: 3cm;
      justify-content:space-between;
   
